--- a/OODJ/src/GUI/Admin/Admin.form
+++ b/OODJ/src/GUI/Admin/Admin.form
@@ -245,7 +245,7 @@
             <Component class="javax.swing.JButton" name="jButton4">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="0" red="0" type="rgb"/>
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="MingLiU-ExtB" size="18" style="3"/>
@@ -254,7 +254,7 @@
                   <Color blue="33" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/GUI/Admin/staffd.png"/>
+                  <Image iconType="2" name="C:\Users\ashwe\OneDrive\Desktop\feed.png"/>
                 </Property>
               </Properties>
               <Events>
@@ -275,7 +275,7 @@
             <Component class="javax.swing.JButton" name="jButton5">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="0" red="0" type="rgb"/>
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="MingLiU-ExtB" size="18" style="3"/>
@@ -284,7 +284,7 @@
                   <Color blue="33" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/GUI/Admin/staffd.png"/>
+                  <Image iconType="3" name="/GUI/Admin/download.png"/>
                 </Property>
               </Properties>
               <Events>
